...
    return Container(
      padding: const EdgeInsets.fromLTRB(10.0, 4.0, 10.0, 40.0),
      child: Column(
        mainAxisSize: MainAxisSize.min,
        children: [
          const Text(
            'Select a symbol:',
            style: TextStyle(fontSize: 18, fontWeight: FontWeight.w500),
          ),
          const SizedBox(height: 2),
          LayoutBuilder(
            builder: (context, constraints) {
              // Two-row layout: 3 on top, 2 on bottom
...
